# slurm-nvtop

./: .gitignore  README.md  pyproject.toml
src/slurm_gpu_top/: __init__.py  cli.py  commands.py  dashboard.py  gpu.py  history.py  models.py  render.py  slurm.py
tests/: test_dashboard_render_cli.py  test_gpu.py  test_history.py  test_slurm.py
tests/fixtures/: sample_snapshot.json
