[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "slurm-gpu-top"
version = "0.2.0"
description = "nvitop-like dashboard for GPU allocations spread across Slurm nodes"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "slurm-gpu-top contributors"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
slurm-gpu-top = "slurm_gpu_top.cli:main"
sgtop = "slurm_gpu_top.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
